catnip_grammar/grammar.js
    source_file: $ => seq(
      repeat($._newline),  // Allow leading newlines
      optional($._statements),
    ),

    // Statements - separated by semicolons or newlines
    _statements: $ => seq(
      $.statement,
      repeat(seq(repeat1($._statement_separator), $.statement)),
      repeat($._statement_separator),
    ),

    statement: $ => choice(
      $.assignment,
      $.while_stmt,
      $.for_stmt,
      $.return_stmt,
      $.break_stmt,
      $.continue_stmt,
      $.try_stmt,
      $.with_stmt,
      $.raise_stmt,
      $.pragma_stmt,
      $.struct_stmt,
      $.trait_stmt,
      $.enum_stmt,
      $.union_stmt,
      $._expression,
    ),

    union_stmt: $ => seq(
      'union',
      field('name', $.identifier),
      optional(field('type_params', $.type_params)),
      '{',
      repeat($.union_variant),
      repeat($.union_method),
      '}',
    ),

    // Union method: subset of struct_method. The body is mandatory, which
    // both rules out abstract methods (unions have no inheritance) and
    // disambiguates from a payload variant (`Some(value)` vs `map(f) => {}`
    // only diverge after the closing paren). No decorators, no `op` overloads:
    // a single dispatch shape for every variant, nullary included.
    union_method: $ => seq(
      field('method_name', $.identifier),
      '(',
      optional($.lambda_params),
      ')',
      optional(seq(':', field('return_type', $.type_expr))),
      '=>',
      $.block,
    ),

    type_params: $ => seq(
      '[',
      $.identifier,
      repeat(seq(',', $.identifier)),
      optional(','),
      ']',
    ),

    union_variant: $ => seq(
      field('name', $.identifier),
      optional(seq(
        '(',
        $.union_field,
        repeat(seq(',', $.union_field)),
        optional(','),
        ')',
      )),
      optional(';'),
    ),

    union_field: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $.type_expr))),
    ),

    // A type expression is a `|`-separated union of atoms. A single atom is the
    // common case (`int`, `list[int]`); the union form (`int | str`, `Point | None`)
    // models optionals and dynamic-interop boundaries. `type_expr` only appears
    // after `:` or inside `[...]`, never in expression position, so the `|` here
    // cannot collide with `bit_or`.
    type_expr: $ => prec.left(seq(
      $.type_atom,
      repeat(seq('|', $.type_atom)),
    )),

    // An atom is a named type (`int`, `list[int]`, `Option[int]`) or a
    // function type (`(int, str) -> bool`). The arrow is right-absorbing:
    // in `(int) -> int | str` the union belongs to the return type (a
    // function type as a union member goes last: `None | (int) -> int`).
    // `->` is distinct from the lambda's `=>`: a type is a contract, not a
    // value, and the two can share a line (`cb: (int) -> int = (x) => x`).
    type_atom: $ => choice(
      seq(
        $.identifier,
        optional($.type_args),
      ),
      $.function_type,
    ),

    type_args: $ => seq(
      '[',
      $.type_expr,
      repeat(seq(',', $.type_expr)),
      optional(','),
      ']',
    ),

    // Decorator: @identifier (for @jit, @pure, etc.)
    assignment: $ => seq(
      repeat($.decorator),  // Zero or more decorators
      $.lvalue,
      repeat(seq('=', $.lvalue)),
      '=',
      $._expression,
    ),

    with_stmt: $ => seq(
      'with',
      $.with_binding,
      repeat(seq(',', $.with_binding)),
      optional(','),
      field('body', $.block),
    ),

    with_binding: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),

    match_expr: $ => seq(
      'match',
      field('value', $._expression),
      '{',
      repeat1($.match_case),
      '}',
    ),

    match_case: $ => seq(
      $.pattern,
      optional(seq('if', field('guard', $._expression))),
      '=>',
      $.block,
    ),

    pattern: $ => $.pattern_or,

    pattern_or: $ => seq(
      $._pattern_primary,
      repeat(seq('|', $._pattern_primary)),
    ),

    _pattern_primary: $ => choice(
      $.pattern_struct,
      $.pattern_enum,
      $.pattern_tuple,
      $.pattern_literal,
      $.pattern_var,
      $.pattern_wildcard,
    ),

    pattern_enum: $ => seq(
      field('enum_name', $.identifier),
      '.',
      field('variant_name', $.identifier),
    ),

    pattern_struct: $ => seq(
      field('struct_name', $.identifier),
      optional(seq('.', field('variant_name', $.identifier))),
      '{',
      field('fields', $.identifier),
      repeat(seq(',', field('fields', $.identifier))),
      optional(','),
      '}',
    ),

    block: $ => seq(
      '{',
      repeat($._newline),
      optional($._statements),
      '}',
    ),

    // Expressions
    _expression: $ => $._null_coal,

    call: $ => prec(PREC.CALL, seq($._atom, $.arguments)),

    arguments: $ => seq('(', optional($._params), ')'),

    _params: $ => choice($.args_kwargs, $.args, $.kwargs),

    _atom: $ => choice(
      $.identifier,
      $.group,
      $.block,
      $.match_expr,
      $.if_expr,
    ),

    lambda_params: $ => choice(
      seq(
        $.lambda_param,
        repeat(seq(',', $.lambda_param)),
        ',',
        $.variadic_param,
      ),
      seq(
        $.lambda_param,
        repeat(seq(',', $.lambda_param)),
      ),
      $.variadic_param,
    ),

    lambda_param: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $.type_expr))),
      optional(seq('=', field('default', $._expression))),
    ),

    unpack_target: $ => choice(
      $.unpack_tuple,
      $.unpack_sequence,
      $.identifier,
    ),

    lvalue: $ => choice($.setattr, $.unpack_target),

    literal: $ => choice(
      $.none,
      $.true,
      $.false,
      $.nd_empty_topos,
      $.string,
      $.fstring,
      $.bstring,
      $.number,
    ),

    number: $ => choice($.imaginary, $.decimal, $.float, $.integer),

    integer: $ => token(choice(
      /0[xX][0-9a-fA-F]+/,
      /0[bB][01]+/,
      /0[oO][0-7]+/,
      /\d+/,
    )),

    identifier: $ => /[a-zA-Z_]\w*/,
